# rust-Blockchain-Demo1

./: .env.example  Cargo.toml  PROJECT_OVERVIEW.md  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: DefiDashboard.tsx  Portfolio.tsx  SecurityDashboard.tsx  TradingDashboard.tsx  WalletConnection.tsx
frontend/src/hooks/: useApi.ts  useRealtime.ts
frontend/src/services/: api.ts
src/: config.rs  main.rs  websocket.rs
src/analytics/: mod.rs  portfolio_tracker.rs  price_feeds.rs  risk_assessor.rs  yield_analyzer.rs
src/api/: chains.rs  defi.rs  dex.rs  docs.rs  health.rs  mod.rs  models.rs  portfolio.rs  security.rs  wallets.rs
src/chains/: arbitrum.rs  ethereum.rs  gas_optimizer.rs  mod.rs  polygon.rs
src/contracts/: defi_contracts.rs  erc20.rs  erc20_new.rs  erc721.rs  mod.rs  proxy.rs
src/defi/: aave.rs  compound.rs  flash_loans.rs  mod.rs
src/dex/: aggregator.rs  mod.rs  sushiswap.rs  uniswap.rs
src/security/: audit_trail.rs  defi_security.rs  emergency_response.rs  input_sanitizer.rs  mev_protection.rs  mod.rs  oracle_security.rs  reentrancy_guard.rs  risk_engine.rs  transaction_validator.rs
src/wallets/: ledger.rs  ledger_new.rs  metamask.rs  mod.rs  multisig.rs  walletconnect.rs
